--- a/CleanroomText.xcodeproj/xcshareddata/xcschemes/CleanroomText OSX.xcscheme
+++ b/CleanroomText.xcodeproj/xcshareddata/xcschemes/CleanroomText OSX.xcscheme
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B08AF011B27E433007A72CB"
+               BlueprintIdentifier = "3B0168601B44871000E330CA"
                BuildableName = "CleanroomText.framework"
-               BlueprintName = "CleanroomText"
-               ReferencedContainer = "container:CleanroomText.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B08AF0C1B27E433007A72CB"
-               BuildableName = "CleanroomTextTests.xctest"
-               BlueprintName = "CleanroomTextTests"
+               BlueprintName = "CleanroomText OSX"
                ReferencedContainer = "container:CleanroomText.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,7 +26,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Release">
+      buildConfiguration = "Debug">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -56,9 +42,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B08AF011B27E433007A72CB"
+            BlueprintIdentifier = "3B0168601B44871000E330CA"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText"
+            BlueprintName = "CleanroomText OSX"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -78,9 +64,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B08AF011B27E433007A72CB"
+            BlueprintIdentifier = "3B0168601B44871000E330CA"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText"
+            BlueprintName = "CleanroomText OSX"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -96,9 +82,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B08AF011B27E433007A72CB"
+            BlueprintIdentifier = "3B0168601B44871000E330CA"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText"
+            BlueprintName = "CleanroomText OSX"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
