--- a/CleanroomText.xcodeproj/xcshareddata/xcschemes/CleanroomText-OSX.xcscheme
+++ b/CleanroomText.xcodeproj/xcshareddata/xcschemes/CleanroomText-OSX.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0710"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,27 +14,27 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B0168601B44871000E330CA"
+               BlueprintIdentifier = "3B00E57B1BA379830011486D"
                BuildableName = "CleanroomText.framework"
-               BlueprintName = "CleanroomText OSX"
+               BlueprintName = "CleanroomText-OSX"
                ReferencedContainer = "container:CleanroomText.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B08AF0C1B27E433007A72CB"
-               BuildableName = "CleanroomTextTests.xctest"
-               BlueprintName = "CleanroomTextTests"
+               BlueprintIdentifier = "3B00E5841BA379830011486D"
+               BuildableName = "CleanroomTextUnitTests.xctest"
+               BlueprintName = "CleanroomTextUnitTests-OSX"
                ReferencedContainer = "container:CleanroomText.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,9 +42,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B0168601B44871000E330CA"
+            BlueprintIdentifier = "3B00E57B1BA379830011486D"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText OSX"
+            BlueprintName = "CleanroomText-OSX"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -52,11 +52,11 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
@@ -64,9 +64,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B0168601B44871000E330CA"
+            BlueprintIdentifier = "3B00E57B1BA379830011486D"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText OSX"
+            BlueprintName = "CleanroomText-OSX"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -74,17 +74,17 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B0168601B44871000E330CA"
+            BlueprintIdentifier = "3B00E57B1BA379830011486D"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText OSX"
+            BlueprintName = "CleanroomText-OSX"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
