--- a/CleanroomText.xcodeproj/xcshareddata/xcschemes/CleanroomText-tvOS.xcscheme
+++ b/CleanroomText.xcodeproj/xcshareddata/xcschemes/CleanroomText-tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0710"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,41 +14,27 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B08AF011B27E433007A72CB"
+               BlueprintIdentifier = "3B00E5991BA37A420011486D"
                BuildableName = "CleanroomText.framework"
-               BlueprintName = "CleanroomText iOS"
-               ReferencedContainer = "container:CleanroomText.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B08AF0C1B27E433007A72CB"
-               BuildableName = "CleanroomTextTests.xctest"
-               BlueprintName = "CleanroomTextTests"
+               BlueprintName = "CleanroomText-tvOS"
                ReferencedContainer = "container:CleanroomText.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Release">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B08AF0C1B27E433007A72CB"
-               BuildableName = "CleanroomTextTests.xctest"
-               BlueprintName = "CleanroomTextTests"
+               BlueprintIdentifier = "3B00E5A21BA37A420011486D"
+               BuildableName = "CleanroomTextUnitTests.xctest"
+               BlueprintName = "CleanroomTextUnitTests-tvOS"
                ReferencedContainer = "container:CleanroomText.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -56,9 +42,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B08AF011B27E433007A72CB"
+            BlueprintIdentifier = "3B00E5991BA37A420011486D"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText iOS"
+            BlueprintName = "CleanroomText-tvOS"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -66,11 +52,11 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
@@ -78,9 +64,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B08AF011B27E433007A72CB"
+            BlueprintIdentifier = "3B00E5991BA37A420011486D"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText iOS"
+            BlueprintName = "CleanroomText-tvOS"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -88,17 +74,17 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B08AF011B27E433007A72CB"
+            BlueprintIdentifier = "3B00E5991BA37A420011486D"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText iOS"
+            BlueprintName = "CleanroomText-tvOS"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
