--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ xcode_project: CleanroomText.xcodeproj
 osx_image: xcode8
 
 script:
- - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6' clean build test
- - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' clean build test
- - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' clean build test
- - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' clean build
+# - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6' clean build test
+ - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+# - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' clean build test
+# - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' clean build
