--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ osx_image: xcode8
 script:
  - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6' clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
  - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6' test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-# - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-# - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-# - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-# - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-# - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+ - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+ - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+ - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+ - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+ - xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
