--- a/Documentation/API/docsets/CleanroomText.docset/Contents/Info.plist
+++ b/Documentation/API/docsets/CleanroomText.docset/Contents/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleName</key>
       <string>CleanroomText</string>
     <key>DocSetPlatformFamily</key>
-      <string>jazzy</string>
+      <string>cleanroomtext</string>
     <key>isDashDocset</key>
       <true/>
     <key>dashIndexFilePath</key>
