--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   gem install xcpretty
 
 script:
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 7' clean test | xcpretty && sleep 10
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' clean test | xcpretty && sleep 10
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' clean test | xcpretty && sleep 10
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' clean build | xcpretty && sleep 10
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 7' clean test
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' clean test
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' clean test
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' clean build
