--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ install:
   - gem install xcpretty
 
 script:
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 120 clean build | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 120 test | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 120 clean build | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 120 test | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 120 clean build | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 120 test | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' -destination-timeout 120 clean build | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -configuration Release -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 120 clean build | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -configuration Release -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 120 test | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -configuration Release -destination 'platform=macOS' -destination-timeout 120 clean build | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -configuration Release -destination 'platform=macOS' -destination-timeout 120 test | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -configuration Release -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 120 clean build | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -configuration Release -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 120 test | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-watchOS -configuration Release -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' -destination-timeout 120 clean build | xcpretty
 
