--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,28 @@ install:
   - gem install xcpretty
 
 script:
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -configuration Release -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 120 clean build | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-iOS -configuration Release -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 120 test | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -configuration Release -destination 'platform=macOS' -destination-timeout 120 clean build | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-OSX -configuration Release -destination 'platform=macOS' -destination-timeout 120 test | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -configuration Release -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 120 clean build | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-tvOS -configuration Release -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 120 test | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -scheme CleanroomText-watchOS -configuration Release -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' -destination-timeout 120 clean build | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 300 clean build | tee "CleanroomText-iOS-build.log" | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 300 test | tee "CleanroomText-iOS-test.log" | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 300 clean build | tee "CleanroomText-macOS-build.log" | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 300 test | tee "CleanroomText-macOS-test.log" | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 300 clean build | tee "CleanroomText-tvOS-build.log" | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 300 test | tee "CleanroomText-tvOS-test.log" | xcpretty
+- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' -destination-timeout 300 clean build | tee "CleanroomText-watchOS-build.log" | xcpretty
+
+after_failure:
+- echo "Travis test result is $TRAVIS_TEST_RESULT"
+- printf "\niOS build log:\n"
+- cat "CleanroomText-iOS-build.log"
+- printf "\niOS test log:\n"
+- cat "CleanroomText-iOS-test.log"
+- printf "\nmacOS build log:\n"
+- cat "CleanroomText-macOS-build.log"
+- printf "\nmacOS test log:\n"
+- cat "CleanroomText-macOS-test.log"
+- printf "\ntvOS build log:\n"
+- cat "CleanroomText-tvOS-build.log"
+- printf "\ntvOS test log:\n"
+- cat "CleanroomText-tvOS-test.log"
+- printf "\nwatchOS build log:\n"
+- cat "CleanroomText-watchOS-build.log"
 
