--- a/.travis.yml
+++ b/.travis.yml
@@ -10,30 +10,26 @@ before_install:
   - git submodule update --init
 
 install:
-  - gem install xcpretty
+  - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 
 script:
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 300 clean build | tee "CleanroomText-iOS-build.log" | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 300 test | tee "CleanroomText-iOS-test.log" | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 300 clean build | tee "CleanroomText-macOS-build.log" | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 300 test | tee "CleanroomText-macOS-test.log" | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 300 clean build | tee "CleanroomText-tvOS-build.log" | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 300 test | tee "CleanroomText-tvOS-test.log" | xcpretty
-- set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' -destination-timeout 300 clean build | tee "CleanroomText-watchOS-build.log" | xcpretty
+  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 300 clean build 2>&1 | tee "CleanroomText-iOS-build.log" | xcpretty ) && rm "CleanroomText-iOS-build.log"
+  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 300 test 2>&1 | tee "CleanroomText-iOS-test.log" | xcpretty ) && rm "CleanroomText-iOS-test.log"
+  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 300 clean build 2>&1 | tee "CleanroomText-macOS-build.log" | xcpretty ) && rm "CleanroomText-macOS-build.log"
+  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 300 test 2>&1 | tee "CleanroomText-macOS-test.log" | xcpretty ) && rm "CleanroomText-macOS-test.log"
+  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 300 clean build 2>&1 | tee "CleanroomText-tvOS-build.log" | xcpretty ) && rm "CleanroomText-tvOS-build.log"
+  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 300 test 2>&1 | tee "CleanroomText-tvOS-test.log" | xcpretty ) && rm "CleanroomText-tvOS-test.log"
+  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' -destination-timeout 300 clean build 2>&1 | tee "CleanroomText-watchOS-build.log" | xcpretty ) && rm "CleanroomText-watchOS-build.log"
 
 after_failure:
-- echo "Travis test result is $TRAVIS_TEST_RESULT"
-- printf "\niOS build log:\n"
-- cat "CleanroomText-iOS-build.log"
-- printf "\niOS test log:\n"
-- cat "CleanroomText-iOS-test.log"
-- printf "\nmacOS build log:\n"
-- cat "CleanroomText-macOS-build.log"
-- printf "\nmacOS test log:\n"
-- cat "CleanroomText-macOS-test.log"
-- printf "\ntvOS build log:\n"
-- cat "CleanroomText-tvOS-build.log"
-- printf "\ntvOS test log:\n"
-- cat "CleanroomText-tvOS-test.log"
-- printf "\nwatchOS build log:\n"
-- cat "CleanroomText-watchOS-build.log"
+  - test -f "CleanroomText-iOS-build.log" && tail -n 2500 "CleanroomText-iOS-build.log"
+  - test -f "CleanroomText-iOS-test.log" && tail -n 2500 "CleanroomText-iOS-test.log"
+  - test -f "CleanroomText-iOS-test.log" && LINE_BEFORE=`cat "CleanroomText-iOS-test.log" | grep -n "IDETestOperationsObserverDebug. Writing diagnostic log for test session to." | awk -F':' '{print $1}'` && LINE=`expr $LINE_BEFORE + 1` && LOG_FILE=`head -n $LINE "CleanroomText-iOS-test.log" | tail -n 1` && cat "$LOG_FILE"
+  - test -f "CleanroomText-macOS-build.log" && tail -n 2500 "CleanroomText-macOS-build.log"
+  - test -f "CleanroomText-macOS-test.log" && tail -n 2500 "CleanroomText-macOS-test.log"
+  - test -f "CleanroomText-macOS-test.log" && LINE_BEFORE=`cat "CleanroomText-macOS-test.log" | grep -n "IDETestOperationsObserverDebug. Writing diagnostic log for test session to." | awk -F':' '{print $1}'` && LINE=`expr $LINE_BEFORE + 1` && LOG_FILE=`head -n $LINE "CleanroomText-macOS-test.log" | tail -n 1` && cat "$LOG_FILE"
+  - test -f "CleanroomText-tvOS-build.log" && tail -n 2500 "CleanroomText-tvOS-build.log"
+  - test -f "CleanroomText-tvOS-test.log" && tail -n 2500 "CleanroomText-tvOS-test.log"
+  - test -f "CleanroomText-tvOS-test.log" && LINE_BEFORE=`cat "CleanroomText-tvOS-test.log" | grep -n "IDETestOperationsObserverDebug. Writing diagnostic log for test session to." | awk -F':' '{print $1}'` && LINE=`expr $LINE_BEFORE + 1` && LOG_FILE=`head -n $LINE "CleanroomText-tvOS-test.log" | tail -n 1` && cat "$LOG_FILE"
+  - test -f "CleanroomText-watchOS-build.log" && tail -n 2500 "CleanroomText-watchOS-build.log"
+
