--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ install:
   - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 
 script:
-  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 300 clean build 2>&1 | tee "CleanroomText-iOS-build.log" | xcpretty ) && rm "CleanroomText-iOS-build.log"
-  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-iOS -destination 'platform=iOS Simulator,OS=10.0,name=iPhone 6s Plus' -destination-timeout 300 test 2>&1 | tee "CleanroomText-iOS-test.log" | xcpretty ) && rm "CleanroomText-iOS-test.log"
-  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 300 clean build 2>&1 | tee "CleanroomText-macOS-build.log" | xcpretty ) && rm "CleanroomText-macOS-build.log"
-  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-OSX -destination 'platform=macOS' -destination-timeout 300 test 2>&1 | tee "CleanroomText-macOS-test.log" | xcpretty ) && rm "CleanroomText-macOS-test.log"
-  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 300 clean build 2>&1 | tee "CleanroomText-tvOS-build.log" | xcpretty ) && rm "CleanroomText-tvOS-build.log"
-  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-tvOS -destination 'platform=tvOS Simulator,OS=10.0,name=Apple TV 1080p' -destination-timeout 300 test 2>&1 | tee "CleanroomText-tvOS-test.log" | xcpretty ) && rm "CleanroomText-tvOS-test.log"
-  - ( set -o pipefail && xcodebuild -project CleanroomText.xcodeproj -configuration Release ONLY_ACTIVE_ARCH=YES -scheme CleanroomText-watchOS -destination 'platform=watchOS Simulator,OS=3.0,name=Apple Watch - 42mm' -destination-timeout 300 clean build 2>&1 | tee "CleanroomText-watchOS-build.log" | xcpretty ) && rm "CleanroomText-watchOS-build.log"
+  - ./BuildControl/bin/travisBuildHelper.sh build iOS
+  - ./BuildControl/bin/travisBuildHelper.sh test iOS
+  - ./BuildControl/bin/travisBuildHelper.sh build OSX
+  - ./BuildControl/bin/travisBuildHelper.sh test OSX
+  - ./BuildControl/bin/travisBuildHelper.sh build tvOS
+  - ./BuildControl/bin/travisBuildHelper.sh test tvOS
+  - ./BuildControl/bin/travisBuildHelper.sh build watchOS
 
 after_failure:
   - test -f "CleanroomText-iOS-build.log" && tail -n 2500 "CleanroomText-iOS-build.log"
