--- a/CleanroomText.xcodeproj/xcshareddata/xcschemes/CleanroomText-macOS.xcscheme
+++ b/CleanroomText.xcodeproj/xcshareddata/xcschemes/CleanroomText-macOS.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3B00E57B1BA379830011486D"
                BuildableName = "CleanroomText.framework"
-               BlueprintName = "CleanroomText-OSX"
+               BlueprintName = "CleanroomText-macOS"
                ReferencedContainer = "container:CleanroomText.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -34,7 +34,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3B00E5841BA379830011486D"
                BuildableName = "CleanroomTextUnitTests.xctest"
-               BlueprintName = "CleanroomTextUnitTests-OSX"
+               BlueprintName = "CleanroomTextUnitTests-macOS"
                ReferencedContainer = "container:CleanroomText.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -44,7 +44,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B00E57B1BA379830011486D"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText-OSX"
+            BlueprintName = "CleanroomText-macOS"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -66,7 +66,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B00E57B1BA379830011486D"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText-OSX"
+            BlueprintName = "CleanroomText-macOS"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -84,7 +84,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B00E57B1BA379830011486D"
             BuildableName = "CleanroomText.framework"
-            BlueprintName = "CleanroomText-OSX"
+            BlueprintName = "CleanroomText-macOS"
             ReferencedContainer = "container:CleanroomText.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
